--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost/mercado_lindo?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo&useSSl=fals
+spring.datasource.url=jdbc:mysql://localhost:3306/mercado_lindo?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo&useSSl=fals
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
