--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/mercado_lindo?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo&useSSl=fals
 spring.datasource.username=root
-spring.datasource.password=102388Emer
+spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=Brazil/East
+
+spring.flyway.locations=classpath:db/migration,classpath:db/testsdata
+spring.flyway.baselineOnMigrate = true
